Changelog for DimensionDoor (v2.1.4-SNAPSHOT)

2013-03-23 13:10:12 +0000    prevent prompt when setting default packs (James Richardson)
2013-03-23 13:08:21 +0000    NPE check for people upgrading (James Richardson)
2013-03-23 13:06:25 +0000    prevent people getting trapped in THE_END by default (James Richardson)
2013-03-23 13:03:55 +0000    toggle respawning in a world on death (James Richardson)
2013-03-23 12:49:07 +0000    remove double register (James Richardson)
2013-03-23 12:47:42 +0000    change texturepacks of online players this enables any updates made using the modify command to apply instantly to any players which are currently in those worlds rather than requiring them to login and out (James Richardson)
2013-03-23 12:42:40 +0000    completes #27 per world texture packs implemented (James Richardson)
2013-03-23 12:33:34 +0000    added delayed task to switch texturepacks (James Richardson)
2013-03-23 12:31:32 +0000    set texturepack OnJoin (James Richardson)
2012-12-30 04:55:00 +0000    add ability to set per world texture packs. Fixes #27. (James Richardson)
2012-11-18 15:16:50 +0000    update localisation key and fix #26 (James Richardson)
2012-11-18 15:04:32 +0000    persist keep_spawn_in_memory fixes #25 (James Richardson)
2012-10-25 21:53:35 +0100    preparing to release (James Richardson)
2012-10-25 21:51:58 +0100    life is too short to fix this dependency problem (James Richardson)
2012-10-25 21:50:10 +0100    update changelog (James Richardson)
2012-10-25 21:22:18 +0100    add default description for uploaded files (James Richardson)
2012-10-25 21:10:17 +0100    add bukkitdev uploader (James Richardson)
2012-10-25 20:55:03 +0100    fix case sensitivity with enums (fix #24) (James Richardson)
2012-10-25 20:46:44 +0100    Fix localisation key mix up (fixes #21 and #23) (James Richardson)
2012-10-25 20:31:35 +0100    clear armour when changing worlds (fixes #8 and #20) (James Richardson)