@@ -1,5 +1,6 @@
 Changelog for DimensionDoor (v2.1.4-SNAPSHOT)
 
+2013-03-23 13:14:02 +0000    added player respawning status to info command (James Richardson)
 2013-03-23 13:10:12 +0000    prevent prompt when setting default packs (James Richardson)
 2013-03-23 13:08:21 +0000    NPE check for people upgrading (James Richardson)
 2013-03-23 13:06:25 +0000    prevent people getting trapped in THE_END by default (James Richardson)
